<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fun"
            android:visibility="gone"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_phone"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/back_pink_button"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/login_phone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_facebook"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/back_blue_button"
        android:drawableStart="@drawable/ic_facebook"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/login_facebook"
        android:visibility="gone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_terminal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="center"
        android:maxLines="5"/>
</LinearLayout>