<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="40dp"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_hey"
            android:textSize="50dp"
            android:textColor="@color/colorBlack"
            android:paddingBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_phone_number"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="@drawable/back_gray_layout"
                android:gravity="center">
                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccpDialog_keyboardAutoPopup="false"
                    app:ccp_defaultNameCode="FR"
                    app:ccp_hintExampleNumber="true" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/back_gray_layout"
                android:gravity="center"
                android:layout_marginStart="5dp">
                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:background="@null"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_ride"
            android:textSize="15dp"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confrim"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/back_pink_button"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/string_confirm"/>



</LinearLayout>