<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="40dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_hey"
                android:textSize="50dp"
                android:textColor="@color/colorBlack"
                android:paddingBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Input your password"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/back_edittext_location">

                <EditText android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="#000"
                    android:drawableStart="@drawable/ic_outline_lock_24"
                    android:textSize="12dp"
                    android:hint="Password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_wrongpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Wrong Password."
                android:textColor="@color/colorRed"
                android:textSize="15dp"
                android:visibility="gone"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_ride"
                android:textSize="15dp"/>
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confrim"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/back_pink_button"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/string_confirm"/>
</LinearLayout>